--- a/app/source/assets/scss/partials/_header-nav.scss
+++ b/app/source/assets/scss/partials/_header-nav.scss
@@ -44,6 +44,7 @@
     flex-direction: row;
 
     @include max-screen($screen-md-max) {
+      flex-direction: column;
       @if bool($navbar-item-mobile-bottom-border) == true {
         @include border-bottom-color('header', 'active-color');
         border-bottom: 1px solid;
